gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue22826.d
version https://git-lfs.github.com/spec/v1
oid sha256:a8b004c17e8f64d022f8bea3297f7358213d5f9330e88adf0b0beb2a3c39b413
size 156
